<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.inzbottom.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_homeFragment_to_workoutFragment"
        app:destination="@id/navigation_workout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.example.inzbottom.ui.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_consultations"
        android:name="com.example.inzbottom.ui.consultations.ConsultationsFragment"
        android:label="@string/title_consultations"
        tools:layout="@layout/fragment_consultations" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.inzbottom.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.inzbottom.ui.Register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">

        <!-- Action to navigate back to HomeFragment -->
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.inzbottom.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">

        <!-- Correct action to navigate from LoginFragment to RegisterFragment -->
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/navigation_register" />
    </fragment>


</navigation>